--- a/package.json
+++ b/package.json
@@ -2,22 +2,40 @@
     "name": "House_Store",
     "version": "1.0.0",
     "main": "index.js",
+    "repository": "git@github.com:Brodoloeins/HouseStore.git",
+    "author": "Brodoloeins <joaofernandovascao@gmail.com>",
     "license": "MIT",
     "dependencies": {
-        "@prisma/client": "^3.10.0",
+        "bcryptjs": "^2.4.3",
         "celebrate": "^15.0.1",
-        "eslint": "^8.10.0",
+        "cors": "^2.8.5",
         "express": "^4.17.3",
-        "prettier": "^2.5.1",
-        "prisma": "^3.10.0"
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.4",
+        "pg": "^8.7.3",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.2.44"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/joi": "^17.2.3",
+        "@types/jsonwebtoken": "^8.5.8",
+        "@types/multer": "^1.4.7",
+        "@types/node": "^17.0.21",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0",
+        "eslint": "^8.10.0",
+        "eslint-config-prettier": "^8.4.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.5.1",
         "ts-node-dev": "^1.1.8",
-        "typescript": "^4.5.5"
+        "tsconfig-paths": "^3.12.0",
+        "typescript": "^4.6.2"
     },
     "scripts": {
-        "dev": "ts-node-dev ./src/server.ts",
-        "migrate": "yarn prisma migrate dev"
+        "dev": "ts-node-dev server.ts"
     }
 }
